use_undefined_identifier/c2/setup_attackers
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/setup_attackers/src/see.c:643:8: error: use of undeclared identifier 'dword_66759C'
v33 = &dword_66759C[v3]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/setup_attackers/src/see.c:672:7: error: use of undeclared identifier 'setup_attackers_bishop_o'
v12 = setup_attackers_bishop_o[v11]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/setup_attackers/src/obj/see.o] Error 1
